# LiNexa

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  STATUS.md  plan.md  pyproject.toml  state_of_idea.md
configs/: README.md  base.yaml  psi0_simple.yaml
configs/ablations/: no_ttt.yaml  ttt_fast_ff.yaml  ttt_fast_ff_decay.yaml
configs/tasks/: simple_handover.yaml  simple_pick.yaml  simple_xmove_pick.yaml
docker/: .env.sample  docker-compose.yml  psi0-server-entrypoint.sh
docs/: README.md  agent_handoff.md  code_reading_map.md  experiment_plan.md  idea.md  minimum_validation_plan.md  plan.md  research_understanding.md  setup.md  theory.md
notebooks/: README.md
patches/: README.md
results/: README.md
scripts/: README.md  apply_patches.sh  run_baseline.sh  run_open_loop_ttt.sh  run_simple_ttt.sh  setup_submodules.sh
scripts/eval/: download_eval_data.sh  download_psi0_ckpt.sh  find_run_dir.sh  log_to_wandb.py  run_phase0_layer_b.sh  run_simple_eval.sh  serve_psi0.sh  stop.sh  sweep_dr_levels.sh
src/linexa/: README.md
src/linexa/adapters/: README.md  psi0.py
src/linexa/cli/: README.md
src/linexa/eval/: README.md  serve_psi0_linexa.py
src/linexa/ttt/: README.md  __init__.py  config.py  fast_ff_wrapper.py  fast_weight.py  outcome_projector.py
src/linexa/utils/: README.md
tests/: test_adapter_safety.py  test_config.py  test_fast_ff_wrapper.py
