[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linexa"
version = "0.0.1"
description = "Episode-level fast-weight adaptation for humanoid VLA models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "Runhao Li" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
